--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2177,7 +2177,7 @@ html {
   background: white url(../../img/partners/biilabs.svg) no-repeat center/97%;
 }
 #partnership-area .partnershipList .icon.hsinchu {
-  background: white url(../../img/partners/logo-hsinchu.jpg) no-repeat center/contain;
+  background: white url(../../img/partners/logo-hsinchu.jpg) no-repeat center/70%;
 }
 #partnership-area .partnershipList .icon.min {
   background: white url(../../img/partners/logo-min.png) no-repeat center/90%;
